[gd_scene load_steps=20 format=3 uid="uid://bv0ca4q3shcn5"]

[ext_resource type="Texture2D" uid="uid://bs65c1wtmctfo" path="res://Assets/Sprites/GameOver/Title1.png" id="1_dqk7c"]
[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_xsauy"]
[ext_resource type="Texture2D" uid="uid://dehnci1a0f5hs" path="res://Assets/Sprites/GameOver/Title2.png" id="2_ylw7e"]
[ext_resource type="Theme" uid="uid://bciinuu1msc6n" path="res://Assets/Themes/MainMenuUI.tres" id="3_xylrd"]
[ext_resource type="Texture2D" uid="uid://dqs175fup217t" path="res://Assets/Sprites/MainMenu/Box.png" id="5_ltstr"]
[ext_resource type="Texture2D" uid="uid://ijjhsk8cj0ma" path="res://Assets/Sprites/GameOver/background.png" id="7_1q6on"]
[ext_resource type="PackedScene" uid="uid://bj10nidhxaq5f" path="res://Scenes/scoreboard_2.tscn" id="8_7r33v"]
[ext_resource type="Texture2D" uid="uid://bmhe3vxosw0vs" path="res://Assets/Sprites/Scoreboard/backgroundNinePatch.png" id="8_c5u4b"]
[ext_resource type="Texture2D" uid="uid://wktqe8sxtius" path="res://Assets/Sprites/GameOver/backgroundCamera.png" id="8_jbcag"]

[sub_resource type="Animation" id="Animation_y1q0o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Over:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(560, 184)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Game:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(559, 152)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Buttons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Text:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Background/BackgroundText:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Text/ScoreText:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ea673"]
resource_name = "slideTitle"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-227, 100), Vector2(560, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Over:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-224, 220), Vector2(-224, 220), Vector2(560, 220)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Buttons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Text:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Background/BackgroundText:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Text/ScoreText:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40nyb"]
_data = {
"RESET": SubResource("Animation_y1q0o"),
"slideTitle": SubResource("Animation_ea673")
}

[sub_resource type="Animation" id="Animation_4ws83"]
resource_name = "HighscoreJiggle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0523599, 0.0523599, -0.0523599]
}

[sub_resource type="Animation" id="Animation_ni8u1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6ub7"]
_data = {
"HighscoreJiggle": SubResource("Animation_4ws83"),
"RESET": SubResource("Animation_ni8u1")
}

[sub_resource type="Animation" id="Animation_4gid5"]
resource_name = "Zoom"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(650, 287), Vector2(1400, 287)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_evrns"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(650, 287)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dsojx"]
resource_name = "Error"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(650, 287), Vector2(664, 287), Vector2(650, 287), Vector2(636, 287), Vector2(650, 287)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2lnod"]
_data = {
"Error": SubResource("Animation_dsojx"),
"RESET": SubResource("Animation_evrns"),
"Zoom": SubResource("Animation_4gid5")
}

[node name="GameOver" type="Node2D"]
script = ExtResource("1_xsauy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../GameOverText")
libraries = {
"": SubResource("AnimationLibrary_40nyb")
}
autoplay = "slideTitle"

[node name="Background" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
position = Vector2(576, 324)
scale = Vector2(9, 10.125)
texture = ExtResource("7_1q6on")
metadata/_edit_lock_ = true

[node name="CameraSprite" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(531, 188)
scale = Vector2(4, 4)
texture = ExtResource("8_jbcag")

[node name="BackgroundText" type="RichTextLabel" parent="Background"]
offset_left = 62.0
offset_top = 11.0
offset_right = 281.0
offset_bottom = 66.0
scale = Vector2(4, 4)
theme = ExtResource("3_xylrd")
bbcode_enabled = true
text = "> Technical difficulties...
> You have become irrelavant Costs are too high
> Shutting off ...
"
visible_characters = 0
visible_ratio = 0.0

[node name="GameOverText" type="Node2D" parent="."]
visible = false

[node name="Game" type="Sprite2D" parent="GameOverText"]
position = Vector2(559, 152)
scale = Vector2(4, 4)
texture = ExtResource("1_dqk7c")

[node name="Over" type="Sprite2D" parent="GameOverText"]
position = Vector2(560, 184)
scale = Vector2(4, 4)
texture = ExtResource("2_ylw7e")

[node name="Buttons" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -331.0
offset_right = 320.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 0
offset_left = 483.0
offset_top = 442.0
offset_right = 543.0
offset_bottom = 538.0
scale = Vector2(2, 2)

[node name="Restart" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xylrd")
text = "Restart"

[node name="ToMainMenu" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xylrd")
text = "Main Menu"

[node name="Options" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xylrd")
text = "Options
"

[node name="QuitGame" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xylrd")
text = "Quit Game
"

[node name="Text" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -522.0
offset_top = 92.0
offset_right = -482.0
offset_bottom = 132.0

[node name="TimeScoreText" type="RichTextLabel" parent="Text"]
layout_mode = 0
offset_left = 358.0
offset_top = 129.0
offset_right = 730.0
offset_bottom = 145.0
scale = Vector2(2, 2)
theme = ExtResource("3_xylrd")
bbcode_enabled = true
text = "[center]Time[/center]
"
scroll_active = false

[node name="ScoreText" type="RichTextLabel" parent="Text"]
layout_mode = 0
offset_left = 358.0
offset_top = 103.0
offset_right = 730.0
offset_bottom = 119.0
scale = Vector2(2, 2)
theme = ExtResource("3_xylrd")
bbcode_enabled = true
text = "[center]Score[/center]"
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="MoneyText" type="RichTextLabel" parent="Text"]
layout_mode = 0
offset_left = 358.0
offset_top = 161.0
offset_right = 730.0
offset_bottom = 177.0
scale = Vector2(2, 2)
theme = ExtResource("3_xylrd")
bbcode_enabled = true
text = "[center]Money[/center]
"
scroll_active = false

[node name="Score" type="Node2D" parent="Text"]
position = Vector2(730, 212)

[node name="OverallScoreText" type="RichTextLabel" parent="Text/Score"]
offset_left = -208.0
offset_top = -30.0
offset_right = -100.0
offset_bottom = -1.0
scale = Vector2(4, 4)
theme = ExtResource("3_xylrd")
bbcode_enabled = true
text = "[center]New Highscore[/center]"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Text/Score"]
root_node = NodePath("../OverallScoreText")
libraries = {
"": SubResource("AnimationLibrary_n6ub7")
}

[node name="scoreboard2" parent="Text" instance=ExtResource("8_7r33v")]
z_index = 1
position = Vector2(1162, 44)
scale = Vector2(2, 2)

[node name="NameEnter" type="Node2D" parent="Text"]
visible = false
position = Vector2(650, 287)

[node name="NinePatchRect" type="NinePatchRect" parent="Text/NameEnter"]
offset_left = -16.0
offset_right = 176.0
offset_bottom = 55.0
texture = ExtResource("8_c5u4b")
region_rect = Rect2(0, 28, 32, 36)
patch_margin_left = 13
patch_margin_top = 26
patch_margin_right = 13
patch_margin_bottom = 29
metadata/_edit_lock_ = true

[node name="LineEdit" type="LineEdit" parent="Text/NameEnter/NinePatchRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 43.0
placeholder_text = "ENTER NAME!"
max_length = 10
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Text/NameEnter"]
libraries = {
"": SubResource("AnimationLibrary_2lnod")
}

[node name="ErrorMessage" type="RichTextLabel" parent="Text/NameEnter"]
visible = false
offset_left = 200.0
offset_top = 5.0
offset_right = 323.0
offset_bottom = 84.0
scale = Vector2(2, 2)
theme = ExtResource("3_xylrd")
theme_override_colors/default_color = Color(1, 0, 0, 1)
bbcode_enabled = true
text = "[center]No special characters allowed![/center]
[center]Maximum length of 10 characters![/center]"

[node name="OptionsMenu" type="Node2D" parent="."]
visible = false
z_index = 1
position = Vector2(576, 304)

[node name="NinePatchRect" type="NinePatchRect" parent="OptionsMenu"]
offset_left = -253.0
offset_top = -104.0
offset_right = -141.0
offset_bottom = -30.0
scale = Vector2(4, 4)
texture = ExtResource("5_ltstr")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 2
patch_margin_top = 5
patch_margin_right = 2
patch_margin_bottom = 5

[node name="Devmode" type="Button" parent="OptionsMenu"]
offset_left = -206.0
offset_top = -20.0
offset_right = -119.0
offset_bottom = -1.0
scale = Vector2(4, 4)
theme = ExtResource("3_xylrd")
toggle_mode = true
text = "Developer mode"

[node name="Difficulty" type="HSlider" parent="OptionsMenu"]
visible = false
offset_left = -206.0
offset_top = -24.0
offset_right = -122.0
offset_bottom = -8.0
scale = Vector2(4, 4)
theme = ExtResource("3_xylrd")
min_value = 1.0
max_value = 4.0
value = 4.0
rounded = true
tick_count = 4
ticks_on_borders = true

[node name="Label" type="Label" parent="OptionsMenu/Difficulty"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_top = -18.0
offset_right = 47.0
offset_bottom = 5.0
theme = ExtResource("3_xylrd")
text = "Difficulty"
vertical_alignment = 1

[node name="Label2" type="Label" parent="OptionsMenu/Difficulty"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -4.0
offset_top = 10.0
offset_right = 43.0
offset_bottom = 33.0
theme = ExtResource("3_xylrd")
text = "Easy"
vertical_alignment = 1

[node name="Label3" type="Label" parent="OptionsMenu/Difficulty"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 60.0
offset_top = 10.0
offset_right = 107.0
offset_bottom = 33.0
theme = ExtResource("3_xylrd")
text = "Normal"
vertical_alignment = 1

[node name="QuitMenuButton" type="Button" parent="OptionsMenu"]
offset_left = 142.0
offset_top = -104.0
offset_right = 154.0
offset_bottom = -85.0
scale = Vector2(4, 4)
theme = ExtResource("3_xylrd")
text = "X
"

[node name="DeleteSavefileButton" type="Button" parent="OptionsMenu"]
offset_left = -206.0
offset_top = 67.0
offset_right = -119.0
offset_bottom = 86.0
scale = Vector2(4, 4)
theme = ExtResource("3_xylrd")
text = "Reset savefile"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_down" from="Buttons/VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="Buttons/VBoxContainer/ToMainMenu" to="." method="_on_to_main_menu_button_down"]
[connection signal="button_down" from="Buttons/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="Buttons/VBoxContainer/QuitGame" to="." method="_on_quit_game_button_down"]
[connection signal="text_submitted" from="Text/NameEnter/NinePatchRect/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="toggled" from="OptionsMenu/Devmode" to="." method="_on_devmode_toggled"]
[connection signal="pressed" from="OptionsMenu/QuitMenuButton" to="." method="_on_quit_menu_button_pressed"]
[connection signal="pressed" from="OptionsMenu/DeleteSavefileButton" to="." method="_on_delete_savefile_button_pressed"]
